generate pin structure

--- a/index.html
+++ b/index.html
@@ -3,9 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>PIN</title>
+    <link rel="stylesheet" href="css/style.css">
+    <script type="application/javascript" src="js/custom.js"></script>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="section-A">
+            <div class="input-button-wrapper">
+                <input type="number" class="js-pin-output">
+                <button class="js-generate-key">Generate Secret Key</button>
+            </div>            
+        </div>            
+
+        <div class="section-B">            
+            <div class="pin-box">
+                <label for="pin-input">Enter PIN</label>
+                <input type="number" id="pin-input"">
+            </div>
+                  
+        </div>
+    </div>    
 </body>
 </html>
