--- a/index.html
+++ b/index.html
@@ -21,7 +21,21 @@
                 <label for="pin-input">Enter PIN</label>
                 <input type="number" id="pin-input"">
             </div>
-                  
+            <div class="keypad">
+                <button class="key">1</button>
+                <button class="key">2</button>
+                <button class="key">3</button>
+                <button class="key">4</button>
+                <button class="key">5</button>
+                <button class="key">6</button>
+                <button class="key">7</button>
+                <button class="key">8</button>               
+                <button class="key">9</button>               
+                <button class="key">0</button>               
+                <button class="key">x</button>               
+                <button class="key">Submit</button>               
+                <button class="key">Clear</button>                               
+            </div>           
         </div>
     </div>    
 </body>
