--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </div>          
                 <div class="pin-box">
                     <label for="pin-input">Enter PIN</label>
-                    <input type="number" id="pin-input"">
+                    <input type="number" id="pin-input">
                 </div>
                 <div class="keypad">
                     <button class="key">1</button>
